--- a/book3.html
+++ b/book3.html
@@ -32,5 +32,6 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.9.359/pdf.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="book-script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/9.1.6/marked.min.js"></script>
 </body>
 </html>
