media and names update, prep for publishing

--- a/index.html
+++ b/index.html
@@ -63,13 +63,9 @@
                 <img src="test.jpg" alt="Character Full" class="character-full-img">
                 <div class="character-details">
                     <div class="character-text">
-                        <h3 id="character-name">Black Swan</h3>
-                        <p id="character-intro">A Memokeeper of the Garden of Recollection. A mysterious and elegant
-                            soothsayer.</p>
-                        <p id="character-desc">She often wears a warm smile and is willing to patiently listen to the
-                            words of others, thus using such means as a pretext to enter "memories" and gain omniscience
-                            over certain matters. A lady passionate about collecting unique memories, yet the thoughts
-                            that guide her are hard to glean.</p>
+                        <h3 id="character-name">Placeholder Text</h3>
+                        <p id="character-intro">Placeholder Text</p>
+                        <p id="character-desc">Placeholder Text</p>
                     </div>
                     <div class="line vertical"></div>
                     <div class="star">✦</div>
