--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <div class="volume-name">Volume 1</div>
                 <div class="book-info">
                     <div class="book-description">
-                        This is the beautiful eternity and the ego... I believe in. This is the Elysian Realm, the story of the Thirteen Flame Chasers.
+                        Description for Book 1
                     </div>
                     <a href="book1.html" class="read-now">View More</a>
                 </div>
