--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 </div>
             </div>
             
-            <div class="book-container" data-book="2" data-chapters="true">
+            <div class="book-container" data-book="2" data-chapters="false">
                 <a href="book2.html">
                     <div class="book-cover">
                         <img src="less.png" alt="Book 2">
